k8s-simulations-labs /06-network-policy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    role: db
spec:
  containers:
  - name: nginx
    image: nginx
